029_vm.tf
resource "azurerm_linux_virtual_machine" "team63_vmbas" {
  name                  = "team63-vmbas"
  location              = var.rgloca
  resource_group_name   = var.rgname
  size                  = "Standard_B2ts_v2"
  admin_username        = "team63"
  network_interface_ids = [azurerm_network_interface.team63_bas_nic.id]

  admin_ssh_key {
    username   = "team63"
    public_key = file("id_rsa.pub")
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "resf"
    offer     = "rockylinux-x86_64"
    sku       = "9-lvm"
    version   = "9.3.20231113"
  }

  plan {
    publisher = "resf"
    product   = "rockylinux-x86_64"
    name      = "9-lvm"
  }

  boot_diagnostics {
    storage_account_uri = null
  }
}

resource "azurerm_linux_virtual_machine" "team63_vmbas2" {
  name                  = "team63-vmbas2"
  location              = var.rgloca2
  resource_group_name   = var.rgname2
  size                  = "Standard_B2ts_v2"
  admin_username        = "team63"
  network_interface_ids = [azurerm_network_interface.team63_bas2_nic.id]

  admin_ssh_key {
    username   = "team63"
    public_key = file("id_rsa.pub")
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "resf"
    offer     = "rockylinux-x86_64"
    sku       = "9-lvm"
    version   = "9.3.20231113"
  }

  plan {
    publisher = "resf"
    product   = "rockylinux-x86_64"
    name      = "9-lvm"
  }

  boot_diagnostics {
    storage_account_uri = null
  }
}
